--- a/src/components/Advantages/Advantages.module.css
+++ b/src/components/Advantages/Advantages.module.css
@@ -19,12 +19,10 @@
   align-items: center;
   gap: 16px;
   background-image: url("../../../public/owlGrey.png");
-   background-repeat: no-repeat;
+  background-repeat: no-repeat;
   background-position: center;
-  background-size: contain; /* зберігає пропорції та не виходить за межі */
-  /* padding: 30px; */
+  background-size: contain;
   border-radius: 12px;
-  /* background-color: #f5f5f5; */
 }
 .item {
   display: flex;
@@ -32,7 +30,6 @@
   gap: 16px;
   width: 80%;
 }
-
 .item:nth-child(even) {
   padding-left: 100px;
 }
