--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -87,13 +87,55 @@
   text-decoration: underline;
   color: #ffcc00;
 }
-.burger {
+/* .burger {
   background: none;
   border: none;
   color: var(--additional-text);
   display: block;
   cursor: pointer;
+} */
+
+.burger {
+  width: 30px;
+  height: 22px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  background: none;
+  border: none;
+  padding: 0;
+  z-index: 1001; /* вище MobileMenu */
 }
+
+.burger span {
+  display: block;
+  height: 3px;
+  width: 100%;
+  background-color: var(--additional-text);
+  border-radius: 2px;
+  transition: all 0.4s ease-in-out;
+  transform-origin: center;
+}
+
+.burger.open span {
+  background-color: black;
+}
+/* Анімація до хрестика */
+.burger.open span:nth-child(1) {
+  transform: rotate(45deg) translate(8px, 8px);
+}
+
+.burger.open span:nth-child(2) {
+  opacity: 0;
+  transform: scale(0);
+}
+
+.burger.open span:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
 .headerLangPosition {
   position: absolute;
   top: 50%;
@@ -146,7 +188,7 @@
   }
 }
 
-/* ==== DESKTOP (1440px+) ==== */
+/* ==== DESKTOP (1280px+) ==== */
 @media screen and (min-width: 1280px) {
   .header {
     height: 106px;
