--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,27 +1,31 @@
 .projects {
   padding: 40px 20px;
-  max-width: 900px;
-  margin: 0 auto;
-  text-align: center;
+   margin: 0 auto;
+  /* text-align: center; */
 }
 .projects_container {
+  max-width: 100%;
+  overflow: hidden;
 }
 .title {
   margin-bottom: 24px;
+  text-align: center;
 }
 .card {
+  
   display: flex;
-  flex-direction: row;
-  gap: 20px;
-  background: #fff;
+  flex-direction: column;
+    background: #fff;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
   overflow: hidden;
+   width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 .imageWrapper {
-  width: 50%;
-  height: 300px;
+   height: 280px;
   overflow: hidden;
 }
 
@@ -29,32 +33,20 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
 }
 
 .info {
-  width: 50%;
+ height: 280px;
   padding: 20px;
   display: flex;
   flex-direction: column;
 }
 
-/* .info h3 {
-  margin: 0 0 10px;
-}
-
-.info p {
-  margin-bottom: 10px;
-} */
-
-/* .info a {
-  color: #20c2c4;
-  text-decoration: none;
-  font-weight: bold;
-} */
 .titleInfo {
   margin: 0 0 10px;
+  text-align: center;
 }
-
 .textInfo {
   /* margin-bottom: 10px; */
 }
@@ -125,4 +117,27 @@
 }
 .arrow:active {
  scale: 0.9;
+}
+
+/* ==== TABLET (768px+) ==== */
+@media screen and (min-width: 768px) {
+ .imageWrapper {
+   height: 300px;
+}
+}
+
+/* ==== DESKTOP (1440px+) ==== */
+@media screen and (min-width: 1280px) {
+   .card {
+  flex-direction: row;
+}
+.imageWrapper {
+   height: 500px;
+   width: 50%;
+}
+.info {
+  height: 500px;
+width: 50%;
+
+}
 }
