--- a/src/components/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/src/components/LanguageSwitcher/LanguageSwitcher.module.css
@@ -1,28 +1,32 @@
 .switcher {
   padding: 6px 8px 4px;
-  border-radius: 4px;
+  border-radius: 16px;
   font-weight: bold;
   cursor: pointer;
-  border: 1px solid;
+  border: 3px solid;
   transition: all 0.3s ease;
-  font-size: 14px;
+  font-weight: 400;
+font-size: 24px;
+  width: 67px;
+height: 61px;
+ transition: border 0.5s ease;
 }
 .white {
   background: transparent;
-  border-color: white;
-  color: white;
+  border-color: var(--white);
+  color: var(--white);
 }
 
 .white:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+    border: 4px solid;
 }
 
 .black {
   background: transparent;
-  border-color: black;
-  color: black;
+  border-color: var( --black);
+  color: var(--black);
 }
 
 .black:hover {
-  background-color: rgba(0, 0, 0, 0.05);
+  border: 4px solid;
 }
