--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,7 +1,6 @@
 .projects {
   padding: 40px 20px;
-   margin: 0 auto;
-  /* text-align: center; */
+  margin: 0 auto;
 }
 .projects_container {
   max-width: 100%;
@@ -12,37 +11,57 @@
   text-align: center;
 }
 .card {
-  
   display: flex;
   flex-direction: column;
-    background: #fff;
+  background: var(--background);
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
   overflow: hidden;
-   width: 100%;
+  width: 100%;
   max-width: 100%;
   box-sizing: border-box;
 }
 
 .imageWrapper {
-   height: 280px;
+  height: 280px;
   overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
 .image {
   width: 100%;
   height: 100%;
   object-fit: cover;
   display: block;
+  opacity: 0;
+  transition: opacity 0.6s ease-in-out;
 }
-
+.loaded {
+  opacity: 1;
+}
+.hidden {
+  display: none;
+}
+.imageLoader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #f9f9f9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
 .info {
- height: 280px;
+  height: 280px;
   padding: 20px;
   display: flex;
   flex-direction: column;
 }
-
 .titleInfo {
   margin: 0 0 10px;
   text-align: center;
@@ -52,7 +71,7 @@
 }
 .linkInfo {
   margin-top: auto;
-  color: #20c2c4;
+  color: var(--accent);
   text-decoration: none;
   font-weight: bold;
   display: inline-flex;
@@ -76,7 +95,7 @@
 .linkInfo:hover .icon {
   opacity: 1;
   transform: translateX(0);
-  border: 1px solid #20c2c4;
+  border: 1px solid var(--accent);
 }
 
 .linkInfo:hover {
@@ -92,7 +111,7 @@
 
 .arrow {
   background: none;
-  border: 2px solid #20c2c4;
+  border: 2px solid var(--accent);
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -112,32 +131,31 @@
   transform: rotate(225deg);
 }
 .arrow:hover {
-  background: #20c2c4;
+  background: var(--accent);
   color: #fff;
 }
 .arrow:active {
- scale: 0.9;
+  scale: 0.9;
 }
 
 /* ==== TABLET (768px+) ==== */
 @media screen and (min-width: 768px) {
- .imageWrapper {
-   height: 300px;
-}
+  .imageWrapper {
+    height: 300px;
+  }
 }
 
 /* ==== DESKTOP (1440px+) ==== */
-@media screen and (min-width: 1280px) {
-   .card {
-  flex-direction: row;
-}
-.imageWrapper {
-   height: 500px;
-   width: 50%;
-}
-.info {
-  height: 500px;
-width: 50%;
-
-}
+@media screen and (min-width: 1440px) {
+  .card {
+    flex-direction: row;
+  }
+  .imageWrapper {
+    height: 500px;
+    width: 50%;
+  }
+  .info {
+    height: 500px;
+    width: 50%;
+  }
 }
