--- a/src/components/Services/Services.module.css
+++ b/src/components/Services/Services.module.css
@@ -26,10 +26,11 @@
   align-items: flex-start;
   gap: 16px;
   padding: 24px;
-  border-radius: 10px;
-  background-color: var(--background);
-  box-shadow: 0px 4px 8px -2px rgba(0, 0, 0, 0.1);
-  transition: transform 0.4s ease, box-shadow 0.4s ease;
+  border: 2px solid var(--accent);
+  border-radius: 16px;
+  /* background-color: var(--background); */
+  /* box-shadow: 0px 4px 8px -2px rgba(0, 0, 0, 0.1); */
+  transition: all 0.4s ease;
   overflow: hidden;
   cursor: pointer;
 }
@@ -41,7 +42,7 @@
   left: 0;
   width: 100%;
   height: 40%;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.25), transparent);
+  background: linear-gradient(to top, #a4d5d7, transparent);
   opacity: 0;
   transition: all 0.3s ease;
   pointer-events: none;
@@ -77,8 +78,8 @@
 }
 
 .card:hover .arrow {
-  border: 1px solid var(--icon);
-  color: var(--icon);
+  border: 1px solid var(--accent);
+  color: var(--accent);
 }
 
 
