--- a/src/components/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/src/components/LanguageSwitcher/LanguageSwitcher.module.css
@@ -1,32 +1,39 @@
 .switcher {
-  padding: 6px 8px 4px;
-  border-radius: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
   font-weight: bold;
   cursor: pointer;
-  border: 3px solid;
+  border: 2px solid;
   transition: all 0.3s ease;
   font-weight: 400;
-font-size: 24px;
-  width: 67px;
-height: 61px;
- transition: border 0.5s ease;
+  font-size: 14px;
+  width: 32px;
+  height: 32px;
 }
 .white {
   background: transparent;
   border-color: var(--white);
   color: var(--white);
 }
-
 .white:hover {
-    border: 4px solid;
+  border-color: var(--accent);
+  color: var(--accent);
 }
-
 .black {
   background: transparent;
-  border-color: var( --black);
+  border-color: var(--black);
   color: var(--black);
 }
 
-.black:hover {
-  border: 4px solid;
+/* ==== TABLET (768px+) ==== */
+@media screen and (min-width: 744px) {
+  .switcher {
+    border-radius: 16px;
+    border: 3px solid;
+    font-size: 24px;
+    width: 68px;
+    height: 68px;
+  }
 }
