--- a/src/components/MobileMenu/MobileMenu.module.css
+++ b/src/components/MobileMenu/MobileMenu.module.css
@@ -11,48 +11,31 @@
 }
 
 .menu {
-  background-color: white;
-  width: 85%;
+  background-color: var(--black);
+  width: 100%;
   max-width: 320px;
-  height: 75%;
+  height: 100;
   min-height: 560px;
   padding: 24px;
+  border: 1px solid var(--accent);
+
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  gap: 24px;
   animation: menuEnter 0.6s cubic-bezier(0.22, 1, 0.36, 1) forwards;
   transform-origin: top right;
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);
   opacity: 0;
 }
-
 .menu.closing {
   animation: menuExit 0.45s ease forwards;
 }
-
-.btnWrapper {
+.btnLang {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
-.closeBtn {
-  padding: 0;
-  background: none;
-  border: none;
-  font-size: 24px;
-  transition: transform 0.3s ease;
-  transform-origin: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.closeBtn:hover {
-  transform: rotate(90deg);
-}
-
 .nav {
   display: flex;
   flex-direction: column;
@@ -60,17 +43,56 @@
 }
 
 .nav a {
+  position: relative;
   font-size: 18px;
   text-decoration: none;
-  color: var(--header-footer);
-  transition: color 0.3s ease;
+  color: var(--white);
+  padding: 12px 0;
+  transition: all 0.3s ease;
 }
-
+.nav a::after {
+  content: "";
+  position: absolute;
+  left: -24px;
+  right: -24px;
+  bottom: 0;
+  height: 2px;
+  background-color: #adc3d5;
+}
 .nav a:hover {
-  color: var(--button-without-icon);
-  text-decoration: underline;
+  color: var(--accent);
 }
-
+.navLink {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.consultationBtn {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  color: var(--white);
+  width: 100%;
+  /* max-width: 300px; */
+  height: 40px;
+  background-color: var(--accent);
+  font-weight: 500;
+  font-size: 18px;
+  border: 2px solid var(--accent);
+  border-radius: 8px;
+  transform: translateY(0);
+  opacity: 1;
+  text-decoration: none;
+  transition: all 0.5s ease;
+}
+.consultationBtn:hover {
+  border: 2px solid var(--white);
+}
+.consultationBtn:active {
+  border: 2px solid var(--accent-activ);
+  background-color: var(--accent-activ);
+}
 .logo {
   width: 100%;
   height: auto;
@@ -117,4 +139,25 @@
     transform: translateY(-20px) scale(0.95);
     opacity: 0;
   }
+}
+
+/* ==== TABLET (768px+) ==== */
+@media screen and (min-width: 744px) {
+  .menu {
+    width: 100%;
+    max-width: 744px;
+    height: 100;
+    min-height: 560px;
+    gap: 32px;
+  }
+  .nav a {
+  font-size: 32px;
+}
+.consultationBtn {
+  height: 68px;
+  width: 456px;
+  font-size: 30px;
+  margin-inline: auto;
+  border-radius: 16px;
+}
 }
