fix section consultation

--- a/src/components/Consultation/Consultation.module.css
+++ b/src/components/Consultation/Consultation.module.css
@@ -1,5 +1,7 @@
 .consultation {
+  /* margin-inline: auto; */
   width: 100vw;
+
   padding: 30px 0 30px;
 }
 .consultation_container {
@@ -9,8 +11,8 @@
   gap: 30px;
 }
 .title {
-  font-size: 24px;
-  font-weight: bold;
+  font-weight: 600;
+  font-size: 20px;
   text-align: center;
 }
 .form {
@@ -19,7 +21,11 @@
   align-items: center;
   gap: 22px;
   width: 100%;
-  max-width: 400px;
+  max-width: 890px;
+  padding: 40px 12px;
+  border: 1px solid rgba(97, 99, 104, 0.5);
+  border-radius: 16px;
+  box-shadow: 4px 4px 15px 0 rgba(0, 0, 0, 0.25);
 }
 .inputWrapper {
   position: relative;
@@ -27,67 +33,73 @@
 }
 .label {
   position: absolute;
-  left: 16px;
-  top: 12px;
+  left: 14px;
+  top: 14px;
   color: #666;
-  font-size: 16px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 133%;
   pointer-events: none;
-  transition: all 0.3s ease;
   background-color: transparent;
   padding: 0 4px;
+  transition: all 0.3s ease;
 }
 .input {
   width: 100%;
+  height: 50px;
   padding: 12px 16px;
   border-radius: 8px;
-  border: 1px solid #20c2c4;
+  border: 2px solid var(--accent);
   background-color: transparent;
   color: black;
-  font-size: medium;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 133%;
   transition: all 0.5s ease;
 }
 .input:focus {
   outline: none;
   background-color: var(--background);
-  box-shadow: 0 0 0 1px rgba(32, 194, 196, 0.3);
+  box-shadow: 0 0 0 2px rgba(32, 194, 196, 0.3);
 }
 .input:focus + .label,
 .input:not(:placeholder-shown) + .label {
-  top: -18px;
+  top: -20px;
   left: -4px;
   font-size: 16px;
-  color: #20c2c4;
+  color: var(--accent);
 }
 .textarea {
-  min-height: 120px;
+  min-height: 140px;
   resize: vertical;
   line-height: 1.5;
   font-family: inherit;
   overflow: auto;
   scrollbar-width: thin;
-  scrollbar-color: #20c2c4 transparent;
+  scrollbar-color: var(--accent) transparent;
 }
 .textarea::-webkit-scrollbar {
   width: 6px;
 }
 .textarea::-webkit-scrollbar-thumb {
-  background-color: #20c2c4;
+  background-color: var(--accent);
   border-radius: 4px;
 }
 .button {
   width: 100%;
-  max-width: 300px;
+  /* max-width: 300px; */
   height: 50px;
-  background-color: #20c2c4;
-
-  color: var(--additional-text);
-  font-size: medium;
-  border: 1px solid var(--additional-text);
+  background-color: var(--accent);
+  color: var(--white);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  border: 1px solid var(--white);
   border-radius: 8px;
   transition: all 0.5s ease;
 }
 .button:hover {
-  transform: scale(1.05);
+ transform: scale(1.05);
 }
 .error {
   color: var(--error);
@@ -103,4 +115,56 @@
 
 .labelError {
   color: var(--error) !important;
+}
+
+/* ==== TABLET (768px+) ==== */
+@media screen and (min-width: 744px) {
+  .form {
+    border-radius: 30px;
+    gap:34px;
+    padding: 80px 50px;
+  }
+  .title {
+  font-size: 32px;
+}
+  .label {
+    left: 14px;
+  top: 24px;
+  font-size: 22px;
+}
+  .input {
+    border-radius: 16px;
+    height: 76px;
+    font-size: 26px;
+  }
+  .input:focus + .label,
+.input:not(:placeholder-shown) + .label {
+  top: -30px;
+  left: -4px;
+  font-size: 22px;
+}
+.textarea {
+  min-height: 214px;
+}
+  .button {
+    font-size: 30px;
+    border-radius: 16px;
+    width: 422px;
+    height: 68px;
+  }
+  .error {
+  font-size: 16px;
+}
+}
+
+/* ==== DESKTOP (1440px+) ==== */
+@media screen and (min-width: 1440px) {
+  .form {
+    border-radius: 40px;
+    gap:54px;
+    padding: 96px 60px;
+  }
+   .title {
+  font-size: 40px;
+}
 }
