--- a/src/components/ModalCard/ModalCard.module.css
+++ b/src/components/ModalCard/ModalCard.module.css
@@ -1,45 +1,101 @@
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.6);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 9999;
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+.modal {
+  background: white;
+  border-radius: 8px;
+  padding: 16px;
+  border: 2px solid var(--accent);
+  width: 343px;
+  position: relative;
+}
+.closeBtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.closeBtn :hover {
+  color: var(--accent);
+}
+.title {
+  font-weight: 600;
+  margin-bottom: 12px;
+  font-size: 18px;
+  text-align: center;
+}
+.description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 115%;
+  margin-bottom: 16px;
+}
+.description:last-child {
+  margin-bottom: 0;
+}
+.descriptionList {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 115%;
+  padding-left: 20px;
+  list-style-type: disc;
+}
+.descriptionListTitle {
+  font-weight: 600;
+  margin-bottom: 8px;
+}
+
+/* ==== TABLET (768px+) ==== */
+@media screen and (min-width: 744px) {
   .modal {
-    background: white;
-    border-radius: 8px;
+    border-radius: 16px;
     padding: 24px;
-    width: 90%;
-    max-width: 500px;
-    position: relative;
+    width: 564px;
   }
-  
   .closeBtn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: transparent;
-    border: none;
-    font-size: 24px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  .closeBtn :hover {
-    color: var( --icon);
-  }
-  
+  font-size: 36px;
+}
   .title {
-    margin-bottom: 12px;
-    text-align: center;
+    font-size: 24px;
+    margin-bottom: 20px;
   }
-  
   .description {
-    line-height: 1.5;
+    font-size: 20px;
   }
-  
+  .descriptionList {font-size: 20px;}
+  .descriptionListTitle {
+  font-size: 22px;
+}
+}
+
+/* ==== DESKTOP (1440px+) ==== */
+@media screen and (min-width: 1440px) {
+  .modal {
+    padding: 32px;
+    width: 980px;
+  }
+  .title {
+    font-size: 34px;
+    margin-bottom: 32px;
+  }
+  .description {
+    font-size: 24px;
+  }
+  .descriptionList {font-size: 24px;}
+  .descriptionListTitle {
+  font-size: 28px;
+}
+}
