--- a/src/components/Advantages/Advantages.module.css
+++ b/src/components/Advantages/Advantages.module.css
@@ -6,11 +6,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 34px;
 }
 .title {
-  font-size: 24px;
-  font-weight: bold;
+  font-weight: 600;
+  font-size: 20px;
   text-align: center;
 }
 .list {
@@ -28,10 +28,11 @@
   display: flex;
   align-items: flex-start;
   gap: 16px;
-  width: 80%;
-}
-.item:nth-child(even) {
-  padding-left: 100px;
+  padding: 16px 16px 16px 23px;
+  border: 1px solid var(--accent);
+  border-radius: 8px;
+  width: 343px;
+  height: 130px;
 }
 .badge {
   position: relative;
@@ -47,12 +48,24 @@
   transform: translateY(12%);
   color: var(--accent);
   text-align: center;
-  line-height: 40px;
-  font-weight: bold;
-  font-size: 52px;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 80%;
 }
 .text {
   flex: 1;
+  font-weight: 400;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 160%;
+}
+
+/* ==== TABLET (768px+) ==== */
+@media screen and (min-width: 744px) {
+}
+
+/* ==== DESKTOP (1440px+) ==== */
+@media screen and (min-width: 1440px) {
+  .item:nth-child(even) {
+    padding-left: 100px;
+  }
 }
